--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 .myButton {
-	box-shadow:inset 0px 1px 0px 0px #e184f3;
-	background-color:#c123de;
-	border-radius:6px;
+	background-color:#9146ff;
+	border-radius:4px;
 	display:inline-block;
 	cursor:pointer;
 	color:#ffffff;
@@ -12,9 +11,10 @@
 	text-decoration:none;
 }
 .myButton:hover {
-	background-color:#a20dbd;
+	background-color:#6441a4;
 }
 .myButton:active {
 	position:relative;
 	top:1px;
 }
+
